@@ -1,5 +1,10 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o Nmap no longer considers an ICMP Host Unreachable as confirmation that a
+  target is down, in accordance with RFC 1122 which says these errors may be
+  transient. Instead, the probe will be destroyed and other probes used to
+  determine aliveness. [Daniel Miller]
+
 o [NSE][GH#711] New script openflow-info gathers preferred and supported
   protocol versions from OpenFlow devices [Jay Smith, Mak Kolybabi]
 
